refactor(extended-2.1): update CSS according to BEM

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .up-container img {
     width: 100%;
 }
-.up-container .more_inf {
+.up-container__more_inf {
     font-family: fantasy, cursive;
 }
 
