--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ body {
     width: 500px;
     margin: 0 auto 0;
 }
-.task {
+.main-container__row-wrapper_task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.main-container__row-wrapper {
     display: flex;
 }
 ul {
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for='new-task'] {
+label[for="new-task"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
