--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .main-container__row-wrapper_task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .main-container__row-wrapper {
   display: flex;
@@ -40,10 +40,10 @@ ul {
   padding: 0;
 }
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
 input,button{
-  outline:none;
+  outline: none;
 }
 button {
   background: none;
