--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -137,11 +137,11 @@ li >  input[type="text"] {
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
   display:none
 }
 
-ul .editMode input[type=text] {
+ul .editMode input[type="text"] {
   display:inline-block;
   width:224px
 }
